--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
       <div class="about-center container">
         <div class="left" data-aos="fade-right" data-aos-duration="2000">
-          <img src="./images/self.JPG" alt="" />
+          <img src="./images/self.png" alt="" />
         </div>
         <div class="right" data-aos="fade-left" data-aos-duration="2000">
           <p>
